--- a/TestNGReview/test-output/old/Default Suite/methods-alphabetical.html
+++ b/TestNGReview/test-output/old/Default Suite/methods-alphabetical.html
@@ -1,22 +1,10 @@
 <h2>Methods run, sorted chronologically</h2><h3>&gt;&gt; means before, &lt;&lt; means after</h3><p/><br/><em>Default Suite</em><p/><small><i>(Hover the method name to see the test class name)</i></small><p/>
 <table border="1">
 <tr><th>Time</th><th>Delta (ms)</th><th>Suite<br>configuration</th><th>Test<br>configuration</th><th>Class<br>configuration</th><th>Groups<br>configuration</th><th>Method<br>configuration</th><th>Test<br>method</th><th>Thread</th><th>Instances</th></tr>
-<tr bgcolor="b29185">  <td>22/08/02 20:22:17</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="TitleAndLoginValidation.loginValidation()[pri:0, instance:com.codewithazam.lesson01.TitleAndLoginValidation@51399530]">loginValidation</td> 
-  <td>main@1965237677</td>   <td></td> </tr>
-<tr bgcolor="b29185">  <td>22/08/02 20:22:25</td>   <td>7936</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="TitleAndLoginValidation.logoValidation()[pri:0, instance:com.codewithazam.lesson01.TitleAndLoginValidation@51399530]">logoValidation</td> 
-  <td>main@1965237677</td>   <td></td> </tr>
-<tr bgcolor="b29185">  <td>22/08/02 20:22:09</td>   <td>-7691</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;TitleAndLoginValidation.openAndNavigate()[pri:0, instance:com.codewithazam.lesson01.TitleAndLoginValidation@51399530]">&gt;&gt;openAndNavigate</td> 
-<td>&nbsp;</td>  <td>main@1965237677</td>   <td></td> </tr>
-<tr bgcolor="b29185">  <td>22/08/02 20:22:20</td>   <td>3042</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;TitleAndLoginValidation.openAndNavigate()[pri:0, instance:com.codewithazam.lesson01.TitleAndLoginValidation@51399530]">&gt;&gt;openAndNavigate</td> 
-<td>&nbsp;</td>  <td>main@1965237677</td>   <td></td> </tr>
-<tr bgcolor="b29185">  <td>22/08/02 20:22:25</td>   <td>8222</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;TitleAndLoginValidation.openAndNavigate()[pri:0, instance:com.codewithazam.lesson01.TitleAndLoginValidation@51399530]">&gt;&gt;openAndNavigate</td> 
-<td>&nbsp;</td>  <td>main@1965237677</td>   <td></td> </tr>
-<tr bgcolor="b29185">  <td>22/08/02 20:22:20</td>   <td>2924</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;TitleAndLoginValidation.quitBrowser()[pri:0, instance:com.codewithazam.lesson01.TitleAndLoginValidation@51399530]">&lt;&lt;quitBrowser</td> 
-<td>&nbsp;</td>  <td>main@1965237677</td>   <td></td> </tr>
-<tr bgcolor="b29185">  <td>22/08/02 20:22:25</td>   <td>8107</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;TitleAndLoginValidation.quitBrowser()[pri:0, instance:com.codewithazam.lesson01.TitleAndLoginValidation@51399530]">&lt;&lt;quitBrowser</td> 
-<td>&nbsp;</td>  <td>main@1965237677</td>   <td></td> </tr>
-<tr bgcolor="b29185">  <td>22/08/02 20:22:30</td>   <td>13007</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;TitleAndLoginValidation.quitBrowser()[pri:0, instance:com.codewithazam.lesson01.TitleAndLoginValidation@51399530]">&lt;&lt;quitBrowser</td> 
-<td>&nbsp;</td>  <td>main@1965237677</td>   <td></td> </tr>
-<tr bgcolor="b29185">  <td>22/08/02 20:22:30</td>   <td>12973</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="TitleAndLoginValidation.titleValidation()[pri:0, instance:com.codewithazam.lesson01.TitleAndLoginValidation@51399530]">titleValidation</td> 
-  <td>main@1965237677</td>   <td></td> </tr>
+<tr bgcolor="93b7af">  <td>22/08/03 14:51:48</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="SoftAssertDemo.logoAndWelcomeValidation()[pri:0, instance:com.codewithazam.lesson02.SoftAssertDemo@776aec5c]">logoAndWelcomeValidation</td> 
+  <td>main@593687897</td>   <td></td> </tr>
+<tr bgcolor="93b7af">  <td>22/08/03 14:51:40</td>   <td>-7909</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;SoftAssertDemo.openAndNavigate()[pri:0, instance:com.codewithazam.lesson02.SoftAssertDemo@776aec5c]">&gt;&gt;openAndNavigate</td> 
+<td>&nbsp;</td>  <td>main@593687897</td>   <td></td> </tr>
+<tr bgcolor="93b7af">  <td>22/08/03 14:51:51</td>   <td>3152</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;SoftAssertDemo.quitBrowser()[pri:0, instance:com.codewithazam.lesson02.SoftAssertDemo@776aec5c]">&lt;&lt;quitBrowser</td> 
+<td>&nbsp;</td>  <td>main@593687897</td>   <td></td> </tr>
 </table>
