--- a/TestNGReview/test-output/emailable-report.html
+++ b/TestNGReview/test-output/emailable-report.html
@@ -8,13 +8,11 @@
 <body>
 <table>
 <tr><th>Test</th><th># Passed</th><th># Skipped</th><th># Retried</th><th># Failed</th><th>Time (ms)</th><th>Included Groups</th><th>Excluded Groups</th></tr>
-<tr><th colspan="8">Default Suite</th></tr>
-<tr><td><a href="#t0">SeleniumReview</a></td><td class="num">3</td><td class="num">0</td><td class="num">0</td><td class="num">0</td><td class="num">20,872</td><td></td><td></td></tr>
+<tr><th colspan="8">Suite</th></tr>
+<tr><td><a href="#t0">GroupsDemo</a></td><td class="num">1</td><td class="num">0</td><td class="num">0</td><td class="num">0</td><td class="num">73</td><td>regression</td><td></td></tr>
 </table>
-<table id='summary'><thead><tr><th>Class</th><th>Method</th><th>Start</th><th>Time (ms)</th></tr></thead><tbody><tr><th colspan="4">Default Suite</th></tr></tbody><tbody id="t0"><tr><th colspan="4">SeleniumReview &#8212; passed</th></tr><tr class="passedeven"><td rowspan="3">com.codewithazam.lesson01.TitleAndLoginValidation</td><td><a href="#m0">loginValidation</a></td><td rowspan="1">1659486137652</td><td rowspan="1">2919</td></tr><tr class="passedeven"><td><a href="#m1">logoValidation</a></td><td rowspan="1">1659486145588</td><td rowspan="1">170</td></tr><tr class="passedeven"><td><a href="#m2">titleValidation</a></td><td rowspan="1">1659486150625</td><td rowspan="1">34</td></tr></tbody>
+<table id='summary'><thead><tr><th>Class</th><th>Method</th><th>Start</th><th>Time (ms)</th></tr></thead><tbody><tr><th colspan="4">Suite</th></tr></tbody><tbody id="t0"><tr><th colspan="4">GroupsDemo &#8212; passed</th></tr><tr class="passedeven"><td rowspan="1">com.codewithazam.lesson03.GroupsDemo</td><td><a href="#m0">test2</a></td><td rowspan="1">1659562438248</td><td rowspan="1">6</td></tr></tbody>
 </table>
-<h2>SeleniumReview</h2><h3 id="m0">com.codewithazam.lesson01.TitleAndLoginValidation#loginValidation</h3><table class="result"><tr><th class="invisible"/></tr></table><p class="totop"><a href="#summary">back to summary</a></p>
-<h3 id="m1">com.codewithazam.lesson01.TitleAndLoginValidation#logoValidation</h3><table class="result"><tr><th class="invisible"/></tr></table><p class="totop"><a href="#summary">back to summary</a></p>
-<h3 id="m2">com.codewithazam.lesson01.TitleAndLoginValidation#titleValidation</h3><table class="result"><tr><th class="invisible"/></tr></table><p class="totop"><a href="#summary">back to summary</a></p>
+<h2>GroupsDemo</h2><h3 id="m0">com.codewithazam.lesson03.GroupsDemo#test2</h3><table class="result"><tr><th class="invisible"/></tr></table><p class="totop"><a href="#summary">back to summary</a></p>
 </body>
 </html>
