--- a/TestNGReview/test-output/old/Default Suite/classes.html
+++ b/TestNGReview/test-output/old/Default Suite/classes.html
@@ -4,22 +4,14 @@
 <th>Method name</th>
 <th>Groups</th>
 </tr><tr>
-<td>com.codewithazam.lesson01.TitleAndLoginValidation</td>
+<td>com.codewithazam.lesson02.SoftAssertDemo</td>
 <td>&nbsp;</td><td>&nbsp;</td></tr>
 <tr>
 <td align='center' colspan='3'>@Test</td>
 </tr>
 <tr>
 <td>&nbsp;</td>
-<td>titleValidation</td>
-<td>&nbsp;</td></tr>
-<tr>
-<td>&nbsp;</td>
-<td>logoValidation</td>
-<td>&nbsp;</td></tr>
-<tr>
-<td>&nbsp;</td>
-<td>loginValidation</td>
+<td>logoAndWelcomeValidation</td>
 <td>&nbsp;</td></tr>
 <tr>
 <td align='center' colspan='3'>@BeforeClass</td>
