--- a/TestNGReview/test-output/emailable-report.html
+++ b/TestNGReview/test-output/emailable-report.html
@@ -8,11 +8,17 @@
 <body>
 <table>
 <tr><th>Test</th><th># Passed</th><th># Skipped</th><th># Retried</th><th># Failed</th><th>Time (ms)</th><th>Included Groups</th><th>Excluded Groups</th></tr>
-<tr><th colspan="8">Suite</th></tr>
-<tr><td><a href="#t0">GroupsDemo</a></td><td class="num">1</td><td class="num">0</td><td class="num">0</td><td class="num">0</td><td class="num">73</td><td>regression</td><td></td></tr>
+<tr><th colspan="8">Default Suite</th></tr>
+<tr><td><a href="#t0">SeleniumReview</a></td><td class="num">1</td><td class="num">0</td><td class="num">0</td><td class="num attn">1</td><td class="num">119</td><td></td><td></td></tr>
 </table>
-<table id='summary'><thead><tr><th>Class</th><th>Method</th><th>Start</th><th>Time (ms)</th></tr></thead><tbody><tr><th colspan="4">Suite</th></tr></tbody><tbody id="t0"><tr><th colspan="4">GroupsDemo &#8212; passed</th></tr><tr class="passedeven"><td rowspan="1">com.codewithazam.lesson03.GroupsDemo</td><td><a href="#m0">test2</a></td><td rowspan="1">1659562438248</td><td rowspan="1">6</td></tr></tbody>
+<table id='summary'><thead><tr><th>Class</th><th>Method</th><th>Start</th><th>Time (ms)</th></tr></thead><tbody><tr><th colspan="4">Default Suite</th></tr></tbody><tbody id="t0"><tr><th colspan="4">SeleniumReview &#8212; failed</th></tr><tr class="failedeven"><td rowspan="1">com.codewithazam.lesson04.ListenerDemo</td><td><a href="#m0">test2</a></td><td rowspan="1">1659579195624</td><td rowspan="1">2</td></tr><tr><th colspan="4">SeleniumReview &#8212; passed</th></tr><tr class="passedeven"><td rowspan="1">com.codewithazam.lesson04.ListenerDemo</td><td><a href="#m1">test1</a></td><td rowspan="1">1659579195591</td><td rowspan="1">25</td></tr></tbody>
 </table>
-<h2>GroupsDemo</h2><h3 id="m0">com.codewithazam.lesson03.GroupsDemo#test2</h3><table class="result"><tr><th class="invisible"/></tr></table><p class="totop"><a href="#summary">back to summary</a></p>
+<h2>SeleniumReview</h2><h3 id="m0">com.codewithazam.lesson04.ListenerDemo#test2</h3><table class="result"><tr><th>Exception</th></tr><tr><td><div class="stacktrace">java.lang.AssertionError: expected [true] but found [false]
+	at com.codewithazam.lesson04.ListenerDemo.test2(ListenerDemo.java:19)
+	at java.base/java.util.ArrayList.forEach(ArrayList.java:1541)
+	at com.intellij.rt.testng.IDEARemoteTestNG.run(IDEARemoteTestNG.java:66)
+	at com.intellij.rt.testng.RemoteTestNGStarter.main(RemoteTestNGStarter.java:109)
+... Removed 28 stack frames</div></td></tr></table><p class="totop"><a href="#summary">back to summary</a></p>
+<h3 id="m1">com.codewithazam.lesson04.ListenerDemo#test1</h3><table class="result"><tr><th class="invisible"/></tr></table><p class="totop"><a href="#summary">back to summary</a></p>
 </body>
 </html>
