--- a/TestNGReview/test-output/old/Default Suite/methods.html
+++ b/TestNGReview/test-output/old/Default Suite/methods.html
@@ -1,10 +1,8 @@
 <h2>Methods run, sorted chronologically</h2><h3>&gt;&gt; means before, &lt;&lt; means after</h3><p/><br/><em>Default Suite</em><p/><small><i>(Hover the method name to see the test class name)</i></small><p/>
 <table border="1">
 <tr><th>Time</th><th>Delta (ms)</th><th>Suite<br>configuration</th><th>Test<br>configuration</th><th>Class<br>configuration</th><th>Groups<br>configuration</th><th>Method<br>configuration</th><th>Test<br>method</th><th>Thread</th><th>Instances</th></tr>
-<tr bgcolor="93b7af">  <td>22/08/03 14:51:40</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;SoftAssertDemo.openAndNavigate()[pri:0, instance:com.codewithazam.lesson02.SoftAssertDemo@776aec5c]">&gt;&gt;openAndNavigate</td> 
-<td>&nbsp;</td>  <td>main@593687897</td>   <td></td> </tr>
-<tr bgcolor="93b7af">  <td>22/08/03 14:51:48</td>   <td>7909</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="SoftAssertDemo.logoAndWelcomeValidation()[pri:0, instance:com.codewithazam.lesson02.SoftAssertDemo@776aec5c]">logoAndWelcomeValidation</td> 
-  <td>main@593687897</td>   <td></td> </tr>
-<tr bgcolor="93b7af">  <td>22/08/03 14:51:51</td>   <td>11061</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;SoftAssertDemo.quitBrowser()[pri:0, instance:com.codewithazam.lesson02.SoftAssertDemo@776aec5c]">&lt;&lt;quitBrowser</td> 
-<td>&nbsp;</td>  <td>main@593687897</td>   <td></td> </tr>
+<tr bgcolor="ebbee5">  <td>22/08/03 22:13:15</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="ListenerDemo.test1()[pri:0, instance:com.codewithazam.lesson04.ListenerDemo@49e53c76]">test1</td> 
+  <td>main@945591847</td>   <td></td> </tr>
+<tr bgcolor="ebbee5">  <td>22/08/03 22:13:15</td>   <td>39</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="ListenerDemo.test2()[pri:0, instance:com.codewithazam.lesson04.ListenerDemo@49e53c76]">test2</td> 
+  <td>main@945591847</td>   <td></td> </tr>
 </table>
