--- a/TestNGReview/test-output/old/Suite/methods-alphabetical.html
+++ b/TestNGReview/test-output/old/Suite/methods-alphabetical.html
@@ -1,6 +1,10 @@
 <h2>Methods run, sorted chronologically</h2><h3>&gt;&gt; means before, &lt;&lt; means after</h3><p/><br/><em>Suite</em><p/><small><i>(Hover the method name to see the test class name)</i></small><p/>
 <table border="1">
 <tr><th>Time</th><th>Delta (ms)</th><th>Suite<br>configuration</th><th>Test<br>configuration</th><th>Class<br>configuration</th><th>Groups<br>configuration</th><th>Method<br>configuration</th><th>Test<br>method</th><th>Thread</th><th>Instances</th></tr>
-<tr bgcolor="d7859e">  <td>22/08/03 17:33:58</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="GroupsDemo.test2()[pri:0, instance:com.codewithazam.lesson03.GroupsDemo@4562e04d]">test2</td> 
-  <td>main@580871917</td>   <td></td> </tr>
+<tr bgcolor="acf68f">  <td>22/08/03 18:26:12</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;GroupsDemo.afterClass()[pri:0, instance:com.codewithazam.lesson03.GroupsDemo@4135c3b]">&lt;&lt;afterClass</td> 
+<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@1199262943</td>   <td></td> </tr>
+<tr bgcolor="acf68f">  <td>22/08/03 18:26:12</td>   <td>-22</td> <td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;GroupsDemo.beforeClass()[pri:0, instance:com.codewithazam.lesson03.GroupsDemo@4135c3b]">&gt;&gt;beforeClass</td> 
+<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@1199262943</td>   <td></td> </tr>
+<tr bgcolor="acf68f">  <td>22/08/03 18:26:12</td>   <td>-9</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="GroupsDemo.test2()[pri:0, instance:com.codewithazam.lesson03.GroupsDemo@4135c3b]">test2</td> 
+  <td>main@1199262943</td>   <td></td> </tr>
 </table>
